--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ config = "0.15.4"
 dotenv = "0.14.1"
 once_cell = "1.18.0"
 actix-web-validator = "6.0.0"
-validator = { version = "0.19.0", features = ["derive"] }
-diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
+validator = { version = "0.18.1", features = ["derive"] }
+diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono"] }
 thiserror = "2.0.9"
 pq = "1.4.3"
+chrono = { version = "0.4.39", features = ["serde"] }
