--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 port=8080
-database_url=""
+database_url="postgresql://postgres:postgres@localhost:5432/postgres"
 host="127.0.0.1"
 app_name="Rust API Starter"
