--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono"] }
 thiserror = "2.0.9"
 pq = "1.4.3"
 chrono = { version = "0.4.39", features = ["serde"] }
+bcrypt = "0.16.0"
